user: Fix typing error

--- a/web/view/user/userShoppingRecord.html
+++ b/web/view/user/userShoppingRecord.html
@@ -8,7 +8,7 @@ $(document).ready(function() {
     var checkStateMapping = {
         1: '非金錢往來行為',
         2: '未付款',
-        3: '以付訂金',
+        3: '已付訂金',
         4: '已結清'
     };
     $(".checkState").each(function(){
