--- a/web/view/user/userShoppingRecordEdit.html
+++ b/web/view/user/userShoppingRecordEdit.html
@@ -176,7 +176,7 @@
                                     <div class="form-check">
                                         <input class="form-check-input" type="radio" name="checkState" value="3">
                                         <label class="form-check-label" for="exampleRadios3">
-                                            以付訂金
+                                            已付訂金
                                         </label>
                                     </div>
                                     <div class="form-check">
