--- a/web/view/user/userShoppingAdd.html
+++ b/web/view/user/userShoppingAdd.html
@@ -136,7 +136,7 @@ $(document).ready(function() {
                                         <div class="form-check">
                                             <input class="form-check-input" type="radio" name="checkState" value="3">
                                             <label class="form-check-label" for="exampleRadios3">
-                                                以付訂金
+                                                已付訂金
                                             </label>
                                         </div>
                                         <div class="form-check">
@@ -147,7 +147,7 @@ $(document).ready(function() {
                                         </div>
                                 </div>
                             </div>
-                            
+
                             <div id="box0" class="box box-primary">
                                 <!--box-body-->
                                 <div class="box-body">
@@ -214,7 +214,7 @@ $(document).ready(function() {
                                 </div>
                             </div>
 
-                            
+
 
 
                         </form>
