--- a/web/view/brand/brandEdit.html
+++ b/web/view/brand/brandEdit.html
@@ -92,8 +92,8 @@
                                     <div id="brandImageDiv" class="form-group">
                                         <label class="col-sm-2 control-label">品牌圖片</label>
                                         <div class="col-sm-10">
-                                            <div class = "form-inline" style="display:inline-block;">
-                                                <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*" style="display: inline;">
+                                            <div class = "form-inline">
+                                                <input type="file" id="brandImage" name="brandImage" data-input="false" accept="image/*">
                                                 \{if $brandData.imageId != ''\}
                                                 <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$brandData.imageId\}')"><i class="glyphicon glyphicon-remove"></i>
                                                 </a> 
