Fix the bug of upload image

--- a/web/view/ui/previewIndex.html
+++ b/web/view/ui/previewIndex.html
@@ -312,15 +312,39 @@
             </a>
         </div>
         <!-- image navbar -->
-        <nav class="navbar navbar-toggleable-md navbar-light bg-light2 d-flex justify-content-around">
-            <div>
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link mx-5" href="#" style="color: black;">ABOUT US</a>
-                    <a class="nav-item nav-link mx-5" href="#" style="color: black;">WHAT'S NEW</a>
-                    <a class="nav-item nav-link mx-5" href="#" style="color: black;">BRAND</a>
-                    <a class="nav-item nav-link mx-5" href="/buy" style="color: black;">BUY</a>
-                    <a class="nav-item nav-link mx-5" href="#" style="color: black;">EDUCATION</a>
-                </div>
+        <nav class="navbar navbar-toggleable-md navbar-light bg-light2">
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarImg">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <a class="navbar-brand invisible" href="javascript:">興南眼鏡行</a>
+            <div class="collapse navbar-collapse" id="navbarImg">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:">
+                            <span style="color: black;">ABOUT US</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:">
+                            <span style="color: black;">WHAT'S NEW</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:">
+                            <span style="color: black;">BRAND</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:">
+                            <span style="color: black;">BUY</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="javascript:">
+                            <span style="color: black;">EDUCATION</span>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </nav>
         <!-- image gallery -->
@@ -340,7 +364,7 @@
     <!-- footer -->
     <footer class="bg-gray p-3">
         <div class="d-flex justify-content-around align-items-center">
-            <img src="http://127.0.0.1:8000/img/logo_2.png" style="height: 90px;">
+            <img src="../image/glasses_icon.png" style="height: 90px;">
             <span style="color: #ffffff; font-size: 20px;">【長榮店】
                 <br>地址: 台南市東區長榮路三段6號
                 <br>TEL: (06) 235-1007</span>
