fix brandList bug

--- a/web/view/brand/brandList.html
+++ b/web/view/brand/brandList.html
@@ -104,7 +104,7 @@
                                             <td><img src="\{$brand.path\}" alt="尚未上傳圖片" width="350px"></td>
                                             <td>\{$brand.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="../controller/brandController.php?action=brandEditPrepare&brandId=\{$brand.brandId\}&imageId=\{$brand.imageId\} ">
+                                                <a href="../controller/brandController.php?action=brandEditPrepare&brandId=\{$brand.brandId\}">
                                                     <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
                                                 </a>&nbsp;
                                                 \{if $brand.imageId != ''\}
