--- a/web/view/user/userCourseRecord.html
+++ b/web/view/user/userCourseRecord.html
@@ -5,15 +5,14 @@
     \{include file="../common/resource.html"\}
 <script>
 $(document).ready(function() {
-    var checkStateMapping = {
-        1: '參加',
-        2: '考量中',
-        3: '不參加',
-    };
-    $(".state").each(function(){
-        var mapping = checkStateMapping[$(this).attr('value')];
-        $(this).html(mapping);
-    });
+        $(document).on('change', '.attendanceState', function () {
+            console.log("change")
+            $.ajax({
+                type: "GET",
+                url: "../controller/userController.php?action=updateUserAttendance",
+                data: `courseId=${$(this).attr('id')}&attendanceState=${$(this).val()}`,
+            });
+        });
 });
 </script>
 </head>
@@ -37,10 +36,16 @@ $(document).ready(function() {
                         </div>
                         \{/if\}
 
-                         <ul class="nav nav-tabs" style="border-bottom-color: #337ab7; border-bottom-width: 3px; font-size:20px; font-weight: bold;">
-                          <li><a href="../controller/userController.php?action=userDetailPrepare&userId=\{$userId\}">會員詳細資料</a></li>
-                          <li><a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}">會員購物資料</a></li>
-                          <li class="active"><a href="#">會員課程資料</a></li>
+                        <ul class="nav nav-tabs" style="border-bottom-color: #337ab7; border-bottom-width: 3px; font-size:20px; font-weight: bold;">
+                            <li>
+                                <a href="../controller/userController.php?action=userDetailPrepare&userId=\{$userId\}">會員詳細資料</a>
+                            </li>
+                            <li>
+                                <a href="../controller/userController.php?action=userShoppingRecordPrepare&userId=\{$userId\}">會員購物資料</a>
+                            </li>
+                            <li class="active">
+                                <a href="#">會員課程資料</a>
+                            </li>
                         </ul>
 
 
@@ -57,23 +62,45 @@ $(document).ready(function() {
                                         </tr>
                                     </thead>
                                     <tbody>
-                                         \{foreach from=$allUserCourseData item=courseData\}
-                                            <tr>
-                                                <td>\{$courseData.courseName\}</td>
-                                                <td class="state" value="\{$courseData.state\}"></td>
-                                                <td>\{$courseData.lastUpdateTime\}</td>
-                                                <td>
+                                        \{foreach from=$allUserCourseData item=courseData\}
+                                        <tr>
+                                            <td>\{$courseData.courseName\}</td>
+                                            <td>
+                                                <select class="form-control attendanceState" id="\{$courseData.courseId\}">
+                                                    \{if $courseData.state == 1\}
+                                                    <option value="1" selected>參加</option>
+                                                    <option value="2">考量中</option>
+                                                    <option value="3">不參加</option>
+                                                    \{/if\}
+                                                    \{if $courseData.state == 2\}
+                                                    <option value="1">參加</option>
+                                                    <option value="2" selected>考量中</option>
+                                                    <option value="3">不參加</option>
+                                                    \{/if\}
+                                                    \{if $courseData.state == 3\}
+                                                    <option value="1">參加</option>
+                                                    <option value="2">考量中</option>
+                                                    <option value="3" selected>不參加</option>
+                                                    \{/if\}
+                                                </select>
+                                            </td>
+                                            <td>\{$courseData.lastUpdateTime\}</td>
+                                            <td>
 
-                                                    <a href="#">
-                                                        <button class="btn btn-sm btn-primary"><i class="glyphicon glyphicon-pencil"></i></button>
-                                                    </a>&nbsp;
+                                                <a href="#">
+                                                    <button class="btn btn-sm btn-primary">
+                                                        <i class="glyphicon glyphicon-pencil"></i>
+                                                    </button>
+                                                </a>&nbsp;
 
-                                                    <a href="#">
-                                                        <button class="btn btn-sm btn-danger" onclick="deleteTran('\{$courseData.courseId\}');"><i class="glyphicon glyphicon-remove"></i></button>
-                                                    </a>
-                                                </td>
-                                            </tr>
-                                         \{/foreach\}
+                                                <a href="#">
+                                                    <button class="btn btn-sm btn-danger" onclick="deleteTran('\{$courseData.courseId\}');">
+                                                        <i class="glyphicon glyphicon-remove"></i>
+                                                    </button>
+                                                </a>
+                                            </td>
+                                        </tr>
+                                        \{/foreach\}
                                     </tbody>
                                 </table>
                             </div>
