Add image description to indexCoverSet

--- a/web/view/ui/previewIndex.html
+++ b/web/view/ui/previewIndex.html
@@ -353,7 +353,7 @@
             <div class="column">
                 <img src="\{if $images[index_img_|cat:$i]\}\{$images[index_img_|cat:$i]\}\{else\}../image/cover_2.png\{/if\}" style="width: 100%;">
                 <div class="gallery-overlay">
-                    <p class="gallery-text">Welcome to Shingnan!</p>
+                    <p class="gallery-text">\{$images[txt_|cat:$i]\}</p>
                 </div>
             </div>
             \{/for\}
