--- a/web/view/brand/brandEdit.html
+++ b/web/view/brand/brandEdit.html
@@ -86,7 +86,7 @@
                                     <div id="descriptionDiv" class="form-group">
                                         <label for="description" class="col-sm-2 control-label">品牌描述</label>
                                         <div class="col-sm-10">
-                                            <input id="description" name="description" class="form-control" value="\{$brandData.description\}">
+                                            <textarea id="description" name="description" class="form-control" style= "overflow:hidden;">\{$brandData.description\}</textarea>
                                         </div>
                                     </div>
                                     <div id="brandImageDiv" class="form-group">
