--- a/web/view/user/userShoppingRecordEdit.html
+++ b/web/view/user/userShoppingRecordEdit.html
@@ -14,11 +14,13 @@
         var glassData = \{$glassData|json_encode\};
         var lenData = \{$lenData|json_encode\};
         var partData = \{$partData|json_encode\};
+        var combineData = \{$combineData|json_encode\};
         var allItemData = {
             'frame': frameData,
             'glass': glassData,
             'len': lenData,
-            'part': partData
+            'part': partData,
+            'combine': combineData
         };
         var allTranDetailData = \{$allTranDetailData|json_encode\};
         var tranData = \{$tranData|json_encode\};
@@ -40,6 +42,7 @@
                                 <option value="glass">鏡片</option>
                                 <option value="len">隱形眼鏡</option>
                                 <option value="part">零件(維修)</option>
+                                <option value="combine">組合商品</option>
                             </select>
                         </div>
                     </div>
