Modify list layout typo

--- a/web/view/combine/combineList.html
+++ b/web/view/combine/combineList.html
@@ -49,7 +49,7 @@
         \{include file="../common/menu.html"\}
         <div class="content-wrapper">
             <section class="content-header">
-                <h1>鏡框檢視修改</h1>
+                <h1>組合商品修改</h1>
             </section>
             <!-- Main content -->
             <section class="content">
@@ -63,7 +63,7 @@
                         \{/if\}
                         <div class="box box-info">
                             <div class="box-header">
-                                <h3 class="box-title">鏡框列表</h3>
+                                <h3 class="box-title">組合商品列表</h3>
                             </div>
                             <div class="box-body">
                                 <table class="table table-striped" id="combineListTable">
