Add APP part in menu

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -258,6 +258,47 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="#">
+                    <i class="fa fa-th-list"></i>
+                    <span>手機APP設定</span>
+                    <i class="fa fa-angle-down pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-align-justify"></i>APP試戴眼鏡管理
+                            <i class="fa fa-angle-down pull-right"></i>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li>
+                                <a href="../controller/tryOnController.php?action=viewIndexCover">
+                                <i class="fa fa-mobile"></i>APP試戴眼鏡新增</a>
+                            </li>
+                            <li>
+                                <a href="../controller/tryOnController.php?action=viewIndexCover">
+                                <i class="fa fa-mobile"></i>APP試戴眼鏡檢視</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">
+                                <i class="fa fa-align-justify"></i>APP試戴眼鏡管理
+                                <i class="fa fa-angle-down pull-right"></i>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li>
+                                <a href="../controller/scrollController.php?action=viewIndexCover">
+                                <i class="fa fa-mobile"></i>APP跑馬燈管理</a>
+                            </li>
+                            <li>
+                                <a href="../controller/scrollController.php?action=viewIndexCover">
+                                <i class="fa fa-mobile"></i>APP跑馬燈管理</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
         </ul>
         \{/if\}
     </section>
