Add scroll and tryOn layout

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -272,28 +272,28 @@
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="../controller/tryOnController.php?action=viewIndexCover">
-                                <i class="fa fa-mobile"></i>APP試戴眼鏡新增</a>
+                                <a href="../controller/tryOnController.php?action=tryOnAddPrepare">
+                                <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡新增</a>
                             </li>
                             <li>
-                                <a href="../controller/tryOnController.php?action=viewIndexCover">
-                                <i class="fa fa-mobile"></i>APP試戴眼鏡檢視</a>
+                                <a href="../controller/tryOnController.php?action=tryOnList">
+                                <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡檢視</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#">
-                                <i class="fa fa-align-justify"></i>APP試戴眼鏡管理
+                                <i class="fa fa-align-justify"></i>APP跑馬燈管理
                                 <i class="fa fa-angle-down pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
                             <li>
-                                <a href="../controller/scrollController.php?action=viewIndexCover">
-                                <i class="fa fa-mobile"></i>APP跑馬燈管理</a>
+                                <a href="../controller/scrollController.php?action=scrollAddPrepare">
+                                <i class="fa fa-mobile"></i>APP跑馬燈新增</a>
                             </li>
                             <li>
-                                <a href="../controller/scrollController.php?action=viewIndexCover">
-                                <i class="fa fa-mobile"></i>APP跑馬燈管理</a>
+                                <a href="../controller/scrollController.php?action=scrollList">
+                                <i class="fa fa-mobile"></i>APP跑馬燈檢視/修改</a>
                             </li>
                         </ul>
                     </li>
