Finsh tryOn and scroll CRUD

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -277,7 +277,7 @@
                             </li>
                             <li>
                                 <a href="../controller/tryOnController.php?action=tryOnList">
-                                <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡檢視</a>
+                                <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡檢視/修改</a>
                             </li>
                         </ul>
                     </li>
