--- a/web/view/tryOn/tryOnAdd.html
+++ b/web/view/tryOn/tryOnAdd.html
@@ -65,7 +65,7 @@
                                         <div class="col-sm-6">
                                             <select class="selectpicker" name="frame" id="frame" data-live-search="true" title="請選擇鏡框">
                                                 \{foreach from=$frameData item=frame \}
-                                                <option value='\{$frame.no\}' selected>\{$frame.frameName\}</option>
+                                                <option value='\{$frame.frameId\}' selected>\{$frame.frameName\}</option>
                                                 \{/foreach\}
                                             </select>
                                         </div>
