--- a/web/view/scroll/scrollList.html
+++ b/web/view/scroll/scrollList.html
@@ -12,8 +12,7 @@
         $('#scrollListTable').DataTable({
             "columnDefs": [
                 { "orderable": false, "targets": 1 },
-                { "orderable": false, "targets": 2 },
-                { "orderable": false, "targets": 4 }
+                { "orderable": false, "targets": 2 }
             ],
             "paging": false,
             "lengthChange": false,
@@ -27,7 +26,7 @@
     function deletescroll(scrollId){
         BootstrapDialog.show({
             title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            message: '確定刪除跑馬燈嗎?',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
