--- a/web/view/tryOn/tryOnList.html
+++ b/web/view/tryOn/tryOnList.html
@@ -26,7 +26,7 @@
     function deletetryOn(tryOnId){
         BootstrapDialog.show({
             title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            message: '確定刪除試戴照片嗎?',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
@@ -71,14 +71,16 @@
                                     <thead>
                                         <tr style="background-color: #00c0ef; color: #fff;">
                                             <th>試戴鏡框名稱</th>
+                                            <th>試戴鏡框編號</th>
                                             <th>使用圖片</th>
                                             <th>操作選項</th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        \{foreach from=$alltryOnData item=tryOn\}
+                                        \{foreach from=$allTryOnData item=tryOn\}
                                         <tr>
-                                            <td>\{$tryOn.tryOnName\}</td>
+                                            <td>\{$tryOn.frameName\}</td>
+                                            <td>\{$tryOn.no\}</td>
                                             <td><img src="\{$tryOn.path\}" alt="尚未上傳圖片" width="350px"></td>
                                             <td>
                                                 <a href="#">
