--- a/web/view/life/lifeAdd.html
+++ b/web/view/life/lifeAdd.html
@@ -5,7 +5,48 @@
     \{include file="../common/resource.html"\}
     <!-- CK Editor -->
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js"> </script>
     <script>
+
+    $(document).ready(function() {
+            $("#lifeImage").filestyle({
+                size: "nr",
+                input: false,
+                buttonText: "上傳圖片",
+                buttonName: "btn-info",
+                iconName: "glyphicon glyphicon-camera"
+            });
+           
+
+            $("#lifeImage").change(function() {
+                readURL(this, '#lifeImg');
+            });
+            
+        });
+
+        function readURL(input, id) {
+            if (input.files && input.files[0]) {
+                var reader = new FileReader();
+
+                reader.onload = function(e) {
+                    $(id).attr('src', e.target.result);
+                    $(id).css('display', '');
+                }
+                reader.readAsDataURL(input.files[0]);
+            }
+        }
+
+        function fieldValidation(field) {
+            if ($.trim($(field).val()) == '') {
+                $(field + 'Div').addClass('has-error');
+                $(field + 'Div').val('');
+                return false;
+            } else {
+                $(field + 'Div').removeClass('has-error');
+            }
+            return true;
+        }
+    //
     $(function() {
         // Replace the <textarea id="lifeEditor"> with a CKEditor
         // instance, using default configuration.
@@ -38,9 +79,22 @@
                             <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/lifeController.php">
                                 <div class="box-body">
                                     <div id="lifeTitleDiv" class="form-group">
-                                        <label for="lifeTitle" class="col-sm-2 control-label">標題</label>
+                                        <label for="lifeTitle" class="col-sm-2 control-label">文章標題</label>
                                         <div class="col-sm-10">
-                                            <input id="lifeTitle" name="lifeTitle" class="form-control" placeholder="輸入文章標題">
+                                            <input id="lifeTitle" name="lifeTitle" class="form-control" placeholder="輸入文章標題"required>
+                                        </div>
+                                    </div>
+                                    <div id="lifeImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">預覽圖片</label>
+                                        <div class="col-sm-10">
+                                            <input type="file" id="lifeImage" name="lifeImage" data-input="false" accept="image/*">
+                                            <img id="lifeImg" class="img-thumbnail" style="display:none">
+                                        </div>
+                                    </div>
+                                    <div id="previewEditorDiv" class="form-group">
+                                        <label for="previewEditorDiv" class="col-sm-2 control-label">預覽文字</label>
+                                        <div class="col-sm-10">
+                                            <textarea id="previewEditor" name="previewEditor" rows="10" cols="80"></textarea>
                                         </div>
                                     </div>
                                     <div id="lifeContent" class="form-group">
