Add article preview (edit)

--- a/web/view/life/lifeEdit.html
+++ b/web/view/life/lifeEdit.html
@@ -6,7 +6,56 @@
     </script>
     <!-- CK Editor -->
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
+    </script>
     <script>
+    $(document).ready(function() {
+        $("#lifeImage").filestyle({
+            size: "nr",
+            input: false,
+            buttonText: "上傳圖片",
+            buttonName: "btn-info",
+            iconName: "glyphicon glyphicon-camera"
+        });
+
+
+        $("#lifeImage").change(function() {
+            readURL(this, '#lifeImg');
+        });
+
+    });
+
+    function readURL(input, id) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function(e) {
+                $(id).attr('src', e.target.result);
+                $(id).css('display', '');
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    function deleteImage(imageId) {
+        BootstrapDialog.show({
+            title: '提醒',
+            message: '確定刪除該預覽圖片嗎?',
+            buttons: [{
+                label: '確定',
+                cssClass: 'btn-danger',
+                action: function() {
+                    location = '../controller/lifeController.php?action=lifeImageDelete&imageId=' + imageId;
+                }
+            }, {
+                label: '取消',
+                action: function(dialogItself) {
+                    dialogItself.close();
+                }
+            }]
+        });
+    }
+    //
     $(function() {
         // Replace the <textarea id="lifeEditor"> with a CKEditor
         // instance, using default configuration.
@@ -39,17 +88,32 @@
                             <form class="form-horizontal" method="post" enctype="multipart/form-data" action="../controller/lifeController.php">
                                 <div class="box-body">
                                     <div id="lifeTitleDiv" class="form-group">
-                                        <label for="lifeTitle" class="col-sm-2 control-label">標題</label>
+                                        <label for="lifeTitle" class="col-sm-2 control-label">文章標題</label>
                                         <div class="col-sm-10">
                                             <input id="lifeTitle" name="lifeTitle" class="form-control" value="\{$lifeData.title\}">
+                                        </div>
+                                    </div>
+                                    <div id="lifeImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">預覽圖片</label>
+                                        <div class="col-sm-10">
+                                            <div class="form-inline">
+                                                <input type="file" id="lifeImage" name="lifeImage" data-input="false" accept="image/*"> \{if $lifeData.imageId != ''\}
+                                                <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$lifeData.imageId\}')"><i class="glyphicon glyphicon-remove"></i>
+                                                </a> \{/if\}
+                                            </div>
+                                            <img id="lifeImg" class="img-thumbnail" src="\{$lifeData.path\}" alt="尚未上傳圖片">
+                                        </div>
+                                    </div>
+                                    <div id="previewEditorDiv" class="form-group">
+                                        <label for="previewEditorDiv" class="col-sm-2 control-label">預覽文字</label>
+                                        <div class="col-sm-10">
+                                            <textarea id="previewEditor" name="previewEditor" rows="10" cols="80">\{$lifeData.preview\}</textarea>
                                         </div>
                                     </div>
                                     <div id="lifeEditorDiv" class="form-group">
                                         <label for="lifeEditor" class="col-sm-2 control-label">內容</label>
                                         <div class="col-sm-10">
-                                            <textarea id="lifeEditor" name="lifeEditor" rows="10" cols="80">
-                                                \{$lifeData.content\}
-                                            </textarea>
+                                            <textarea id="lifeEditor" name="lifeEditor" rows="10" cols="80">\{$lifeData.content\}</textarea>
                                         </div>
                                     </div>
                                 </div>
@@ -57,6 +121,8 @@
                                     <a href="../controller/lifeController.php?action=lifeList" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="lifeEdit">
                                     <input type="hidden" name="lifeId" value="\{$lifeData.articleId\}">
+                                    \{if $lifeData.imageId != ''\}
+                                    <input type="hidden" name="imageId" value="\{$lifeData.imageId\}"> \{/if\}
                                     <button type="submit" class="btn btn-success">更新</button>
                                 </div>
                             </form>
