--- a/web/view/education/educationEdit.html
+++ b/web/view/education/educationEdit.html
@@ -5,7 +5,56 @@
     \{include file="../common/resource.html"\}
     <!-- CK Editor -->
     <script type="text/javascript" src="../plugins/ckeditor/ckeditor.js"></script>
+    <script type="text/javascript" src="../plugins/bootstrap-filestyle/src/bootstrap-filestyle.min.js">
+    </script>
     <script>
+    $(document).ready(function() {
+        $("#educationImage").filestyle({
+            size: "nr",
+            input: false,
+            buttonText: "上傳圖片",
+            buttonName: "btn-info",
+            iconName: "glyphicon glyphicon-camera"
+        });
+
+
+        $("#educationImage").change(function() {
+            readURL(this, '#educationImg');
+        });
+
+    });
+
+    function readURL(input, id) {
+        if (input.files && input.files[0]) {
+            var reader = new FileReader();
+
+            reader.onload = function(e) {
+                $(id).attr('src', e.target.result);
+                $(id).css('display', '');
+            }
+            reader.readAsDataURL(input.files[0]);
+        }
+    }
+
+    function deleteImage(imageId) {
+        BootstrapDialog.show({
+            title: '提醒',
+            message: '確定刪除該預覽圖片嗎?',
+            buttons: [{
+                label: '確定',
+                cssClass: 'btn-danger',
+                action: function() {
+                    location = '../controller/educationController.php?action=educationImageDelete&imageId=' + imageId;
+                }
+            }, {
+                label: '取消',
+                action: function(dialogItself) {
+                    dialogItself.close();
+                }
+            }]
+        });
+    }
+    //
     $(function() {
         // Replace the <textarea id="educationEditor"> with a CKEditor
         // instance, using default configuration.
@@ -38,24 +87,40 @@
                             <form class="form-horizontal" method="post" enctype="multipart/form-data" ction="../controller/educationController.php">
                                 <div class="box-body">
                                     <div id="educationTitleDiv" class="form-group">
-                                        <label for="educationTitle" class="col-sm-2 control-label">標題</label>
+                                        <label for="educationTitle" class="col-sm-2 control-label">文章標題</label>
                                         <div class="col-sm-10">
-                                            <input id="educationTitle" name="educationTitle" class="form-control" value="\{$educationData.title\}">
+                                            <input id="educationTitle" name="educationTitle" class="form-control" value="\{$educationData.title\}" required>
+                                        </div>
+                                    </div>
+                                    <div id="educationImageDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">預覽圖片</label>
+                                        <div class="col-sm-10">
+                                            <div class="form-inline">
+                                                <input type="file" id="educationImage" name="educationImage" data-input="false" accept="image/*"> \{if $educationData.imageId != ''\}
+                                                <a class="btn btn-sm btn-danger" onclick="deleteImage('\{$educationData.imageId\}')"><i class="glyphicon glyphicon-remove"></i>
+                                                </a> \{/if\}
+                                            </div>
+                                            <img id="educationImg" class="img-thumbnail" src="\{$educationData.path\}" alt="尚未上傳圖片">
+                                        </div>
+                                    </div>
+                                    <div id="previewEditorDiv" class="form-group">
+                                        <label for="previewEditorDiv" class="col-sm-2 control-label">預覽文字</label>
+                                        <div class="col-sm-10">
+                                            <textarea id="previewEditor" name="previewEditor" rows="10" cols="80">\{$educationData.preview\}</textarea>
                                         </div>
                                     </div>
                                     <div id="educationEditorDiv" class="form-group">
                                         <label for="educationEditor" class="col-sm-2 control-label">內容</label>
                                         <div class="col-sm-10">
-                                            <textarea id="educationEditor" name="educationEditor" rows="10" cols="80">
-                                                \{$educationData.content\}
-                                            </textarea>
+                                            <textarea id="educationEditor" name="educationEditor" rows="10" cols="80">\{$educationData.content\}</textarea>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="box-footer" style="text-align: right;">
                                     <a href="../controller/educationController.php?action=educationList" class="btn btn-warning">取消</a>
                                     <input type="hidden" name="action" value="educationEdit">
-                                    <input type="hidden" name="educationId" value="\{$educationData.articleId\}">
+                                    <input type="hidden" name="educationId" value="\{$educationData.articleId\}"> \{if $educationData.imageId != ''\}
+                                    <input type="hidden" name="imageId" value="\{$educationData.imageId\}"> \{/if\}
                                     <button type="submit" class="btn btn-success">更新</button>
                                 </div>
                             </form>
